fix: use session mode when uploading to share; fix share deletion; check owner when modifying